# bugfinder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
scripts/: check_unnotified.py  find_chat_id.py  probe_aggregators.py  probe_kabum.py  probe_ml_browser.py  probe_ml_endpoints.py  probe_ml_search.py  probe_pelando.py  probe_pelando2.py  probe_promobit.py  probe_sources.py  push_unnotified.py
src/bugfinder/: cli.py  config.py  detector.py  enricher.py  matcher.py  models.py  scanner.py  storage.py  viability.py  watch.py
src/bugfinder/auth/: __init__.py  ml_oauth.py
src/bugfinder/benchmark/: __init__.py  aggregator.py  kabum_lookup.py
src/bugfinder/notifier/: __init__.py  callbacks.py  telegram.py
src/bugfinder/sources/: __init__.py  base.py  kabum.py  mercadolivre.py  ml_browser.py  promobit.py
