[project]
name = "bugfinder"
version = "0.1.0"
description = "Bug finder de produtos para revenda no Mercado Livre"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
bugfinder = "bugfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bugfinder"]

[tool.ruff]
line-length = 100
target-version = "py311"
